--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: Coderic
+title: Coderic CoWorker
 email: info@coderic.co.ve
 description: Corporacion Orientada al Desarrollo Estratégico de Recursos de Información Comercial
 baseurl: ""
